--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-    "buildCommand": "npm install && npx prisma generate && npm run build",
-    "framework": "nextjs",
-    "installCommand": "npm ci --legacy-peer-deps"
+    "buildCommand": "prisma generate && next build",
+    "framework": "nextjs"
 }
