--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "reactflow": "^11.11.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.13",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
